Rename kubernetes essentials tasks

--- a/ansible/roles/kubernetes_essentials/tasks/argocd.yaml
+++ b/ansible/roles/kubernetes_essentials/tasks/argocd.yaml
@@ -19,7 +19,7 @@
 
 - name: Deploy argo-cd
   kubernetes.core.helm:
-    kubeconfig: "{{ kubeconfig_temp_path }}"
+    kubeconfig: "{{ kubeconfig_path }}"
     name: argocd
     chart_ref: argo/argo-cd
     release_namespace: argocd
