--- a/ansible/roles/kubernetes_essentials/tasks/keycloak.yaml
+++ b/ansible/roles/kubernetes_essentials/tasks/keycloak.yaml
@@ -19,7 +19,7 @@
 
 - name: Deploy keycloak
   kubernetes.core.helm:
-    kubeconfig: "{{ kubeconfig_temp_path }}"
+    kubeconfig: "{{ kubeconfig_path }}"
     name: keycloak
     chart_ref: codecentric/keycloak
     release_namespace: keycloak
