--- a/ansible/roles/kubernetes_essentials/tasks/main.yaml
+++ b/ansible/roles/kubernetes_essentials/tasks/main.yaml
@@ -1,77 +1,77 @@
 # roles/controlplane/tasks/main.yml
 - name: install cilium CNI
-  import_tasks: setup_cilium_cni.yaml
+  import_tasks: cilium_cni.yaml
   become: true
   tags:
     - cilium
 
-# ## Enable this or setup external Ceph Storage
-# - name: Setup NFS provisioner
-#   import_tasks: setup_nfs_provisioner.yaml
-#   become: true
-#   tags:
-#     - nfs
+## Enable this or setup external Ceph Storage
+- name: Setup NFS provisioner
+  import_tasks: nfs_provisioner.yaml
+  become: true
+  tags:
+    - nfs
 
 - name: Setup argo-cd
-  import_tasks: setup_argocd.yaml
+  import_tasks: argocd.yaml
   become: true
   tags:
     - argocd
 
 - name: Setup sealed-secrets
-  import_tasks: setup_sealed_secrets.yaml
+  import_tasks: sealed_secrets.yaml
   become: true
   tags:
     - sealedsecrets
 
 - name: Setup prometheus
-  import_tasks: setup_prometheus.yaml
+  import_tasks: prometheus.yaml
   become: true
   tags:
     - prometheus
 
-- name: Setup linkerd
-  import_tasks: setup_linkerd.yaml
-  become: true
-  tags:
-    - linkerd
-
 - name: Setup metrics-server
-  import_tasks: setup_metrics_server.yaml
+  import_tasks: metrics_server.yaml
   become: true
   tags:
     - metrics-server
 
 - name: Setup keycloak
-  import_tasks: setup_keycloak.yaml
+  import_tasks: keycloak.yaml
   become: true
   tags:
     - keycloak
 
 - name: Setup Certmanager
-  import_tasks: setup_certmanager.yaml
+  import_tasks: certmanager.yaml
   become: true
   tags:
     - certmanager
 
 - name: Setup metallb
-  import_tasks: setup_metallb.yaml
+  import_tasks: metallb.yaml
   tags:
     - metallb
 
-# - name: Setup kube-vip
-#   import_tasks: setup_kube_vip.yaml
-#   tags:
-#     - kube-vip
+- name: Setup kube-vip
+  import_tasks: kube_vip.yaml
+  tags:
+    - kube-vip
 
 - name: Setup Istio
-  import_tasks: setup_istio.yaml
+  import_tasks: istio.yaml
   become: true
   tags:
     - istio
 
+- name: Setup linkerd
+  import_tasks: linkerd.yaml
+  become: true
+  tags:
+    - linkerd
+
 - name: Setup Gateway
-  import_tasks: setup_gateway.yaml
+  import_tasks: gateway.yaml
   become: true
   tags:
     - gateway
