--- a/ansible/roles/kubernetes_essentials/tasks/sealed_secrets.yaml
+++ b/ansible/roles/kubernetes_essentials/tasks/sealed_secrets.yaml
@@ -8,7 +8,7 @@
 
 - name: Deploy sealed-secrets
   kubernetes.core.helm:
-    kubeconfig: "{{ kubeconfig_temp_path }}"
+    kubeconfig: "{{ kubeconfig_path }}"
     name: sealed-secrets
     chart_ref: sealed-secrets/sealed-secrets
     release_namespace: kube-system
