--- a/ansible/tf_ansible_vars_file.yaml
+++ b/ansible/tf_ansible_vars_file.yaml
@@ -15,3 +15,6 @@ tf_load_balancer_ip:
   - 192.168.254.207
 
 tf_ansible_control_node_ip: 192.168.254.208
+
+tf_nfs_server_ip: 
+  - 192.168.254.107
