--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -3,8 +3,6 @@
 
 - hosts: localhost
   gather_facts: false 
-  vars_files:
-    - tf_ansible_vars_file.yaml
   tasks:
     - name: Check mandatory variables imported from Terraform
       assert:
@@ -14,9 +12,23 @@
           - tf_ansible_control_node_ip is defined
         fail_msg: "tf_* variable usually defined in './ansible/tf_ansible_vars_file.yaml' is missing"
 
-- import_playbook: setup_nodes.yaml
-  tags: setup_nodes
-- import_playbook: setup_essential_apps.yaml
+- import_playbook: ansible_control_node.yaml
+  when: not (skip_tasks | default(false))
+  tags: ansible_control_node
+
+- import_playbook: kubernetes_tools.yaml
+  tags: kubernetes_tools
+
+- import_playbook: load_balancers.yaml
+  tags: load_balancers
+
+- import_playbook: nfs_server.yaml
+  when: not (skip_tasks | default(false))
+  tags: nfs
+
+- import_playbook: kubernetes_essentials.yaml
   tags: essentials
-# - import_playbook: setup_applications.yaml
-#   tags: apps
+
+- import_playbook: setup_applications.yaml
+  when: not (skip_tasks | default(false))
+  tags: apps
