--- a/cni_disable_patch.yaml
+++ b/cni_disable_patch.yaml
@@ -2,3 +2,7 @@ cluster:
   network:
     cni:
       name: none
+  proxy:
+    disabled: true
+
+# https://docs.cilium.io/en/stable/installation/k8s-install-helm/
