--- a/.gitattributes
+++ b/.gitattributes
@@ -9,4 +9,5 @@ init-config-cert-key filter=crypt diff=crypt merge=crypt
 kubeconfig filter=crypt diff=crypt merge=crypt
 csi_* filter=crypt diff=crypt merge=crypt
 ansible/roles/bootstrap/vars/main.yaml filter=crypt diff=crypt merge=crypt
+ansible/roles/kubernetes_essentials/vars/main.yaml filter=crypt diff=crypt merge=crypt
 _out/* filter=crypt diff=crypt merge=crypt
