--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -9,8 +9,8 @@
         that:
           - tf_controlplane_ip is defined
           - tf_worker_ip is defined
-          - tf_ansible_control_node_ip is defined
-        fail_msg: "tf_* variable usually defined in './ansible/tf_ansible_vars_file.yaml' is missing"
+          - tf_load_balancer_ip is defined
+        fail_msg: "tf_* variable usually defined in './ansible/group_vars/all/tf_ansible_vars_file.yaml' is missing"
 
 - import_playbook: ansible_control_node.yaml
   when: not (skip_tasks | default(false))
