--- a/ansible/roles/kubernetes_essentials/tasks/certmanager.yaml
+++ b/ansible/roles/kubernetes_essentials/tasks/certmanager.yaml
@@ -88,3 +88,4 @@
                     - name: prod-web
                       namespace: default
                       kind: Gateway
+                      group: gateway.networking.k8s.io
